# cynative

./: .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  about.go  about_internal_test.go  go.mod  go.sum  install.ps1  install.sh  release-please-config.json
.agentlane/: claim.txt
.github/: dependabot.yml  live-llm-manifest.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: attestation.yaml  ci.yaml  codeql.yaml  connector-aws-e2e.yaml  connector-e2e.yaml  connector-gcp-e2e.yaml  connector-github-e2e.yaml  dependabot-auto-merge.yaml  (+15 more)
.goreleaser/: entitlements.plist
docs/: install-windows.md
test/: PSScriptAnalyzerSettings.psd1  archive.smoke.test.ps1  archive.smoke.test.sh  ci-gate-assert.unit.test.sh  ci-gate-contract.unit.test.sh  connector-e2e-contract.unit.test.sh  connector-e2e-gate-assert.unit.test.sh  connector-e2e.unit.test.sh  connector.aws.e2e.test.sh  connector.gcp.e2e.test.sh  connector.github.e2e.test.sh  dependabot-override.unit.test.sh  e2e-guardrails.unit.test.sh  homebrew.smoke.test.sh  install-script.smoke.test.ps1  install-script.smoke.test.sh  install.e2e.Tests.ps1  install.e2e.test.sh  install.smoke.test.sh  install.unit.Tests.ps1  install.unit.test.sh  llm-smoke-roster.unit.test.sh  llm-tools.smoke.test.sh  llm.smoke.test.sh  pkg.smoke.test.sh  render-scoop.unit.test.sh  scoop.smoke.test.ps1  serve-fixture.py
tools/rcodesign/: Cargo.toml
(+646 files in other folders)
